--- a/widgets/create-react-app.yaml
+++ b/widgets/create-react-app.yaml
@@ -6,8 +6,7 @@ group: free
 customUi: |
    <#assign wp=JspTaglibs[ "/aps-core"]>
    <link rel="stylesheet" type="text/css" href="<@wp.resourceURL />react_app/static/css/main.a617e044.chunk.css">
-   <script async src="<@wp.resourceURL />react_app/static/js/2.7896796f.chunk.js"></script>
-   <script async src="<@wp.resourceURL />react_app/static/js/3.246bd1c7.chunk.js"></script>
-   <script async src="<@wp.resourceURL />react_app/static/js/runtime-main.67dee05b"></script>
-   <script async src="<@wp.resourceURL />react_app/static/js/main.e886c5d5.chunk.js"></script>
+   <script async src="<@wp.resourceURL />react_app/static/js/2.7d2079ff.chunk.js"></script>
+   <script async src="<@wp.resourceURL />react_app/static/js/runtime-main.475252d9.js"></script>
+   <script async src="<@wp.resourceURL />react_app/static/js/main.e4bc598d.chunk.js"></script>
    <my-widget />
